added additional operation and made some more changes to the DSL
