# languages/Microservice/source_gen/Microservice/structure/LanguageConceptSwitch.java
@@ -20,28 +20,30 @@ public final class LanguageConceptSwitch {
   public static final int Entity = 8;
   public static final int EntityID = 9;
   public static final int EntityType = 10;
-  public static final int GetEntities = 11;
-  public static final int GetEntity = 12;
-  public static final int IDeliveredPayloadType = 13;
-  public static final int IExpectedPayloadType = 14;
-  public static final int IOperationMethod = 15;
-  public static final int IOperationType = 16;
-  public static final int IQueryParam = 17;
-  public static final int ISupportedLanguage = 18;
-  public static final int KeyValuePair = 19;
-  public static final int Message = 20;
-  public static final int Microservice = 21;
-  public static final int MicroserviceReference = 22;
-  public static final int NodeJs = 23;
-  public static final int Operation = 24;
-  public static final int OperationMethod = 25;
-  public static final int OperationType = 26;
-  public static final int PayloadType = 27;
-  public static final int Python = 28;
-  public static final int READ = 29;
-  public static final int SupportedLanguage = 30;
-  public static final int UPDATE = 31;
-  public static final int UpdateEntity = 32;
+  public static final int EntityTypeReference = 11;
+  public static final int GetEntities = 12;
+  public static final int GetEntity = 13;
+  public static final int GetEntityBy = 14;
+  public static final int IDeliveredPayloadType = 15;
+  public static final int IExpectedPayloadType = 16;
+  public static final int IOperationMethod = 17;
+  public static final int IOperationType = 18;
+  public static final int ISupportedLanguage = 19;
+  public static final int KeyValuePair = 20;
+  public static final int KeyValuePairReference = 21;
+  public static final int Message = 22;
+  public static final int Microservice = 23;
+  public static final int MicroserviceReference = 24;
+  public static final int NodeJs = 25;
+  public static final int Operation = 26;
+  public static final int OperationMethod = 27;
+  public static final int OperationType = 28;
+  public static final int PayloadType = 29;
+  public static final int Python = 30;
+  public static final int READ = 31;
+  public static final int SupportedLanguage = 32;
+  public static final int UPDATE = 33;
+  public static final int UpdateEntity = 34;
 
   public LanguageConceptSwitch() {
     LanguageConceptIndexBuilder builder = new LanguageConceptIndexBuilder(0xe995fbb60310461aL, 0xbe22cc66f48262f1L);
@@ -56,15 +58,17 @@ public final class LanguageConceptSwitch {
     builder.put(0x5775eded06eae105L, Entity);
     builder.put(0x5775eded06eae106L, EntityID);
     builder.put(0x1957db2831e8dd89L, EntityType);
+    builder.put(0x624f1b6582e0e556L, EntityTypeReference);
     builder.put(0x4151f0e6b1d07321L, GetEntities);
     builder.put(0x5775eded06ea1f59L, GetEntity);
+    builder.put(0x624f1b6583126083L, GetEntityBy);
     builder.put(0x5775eded06ecae08L, IDeliveredPayloadType);
     builder.put(0x5775eded06eae102L, IExpectedPayloadType);
     builder.put(0x4151f0e6b1d117cdL, IOperationMethod);
     builder.put(0x4151f0e6b1cb88b6L, IOperationType);
-    builder.put(0x5775eded06f420fbL, IQueryParam);
     builder.put(0x2242fe026373f54eL, ISupportedLanguage);
     builder.put(0x1957db2831e8dd8cL, KeyValuePair);
+    builder.put(0x624f1b6582e9a400L, KeyValuePairReference);
     builder.put(0x5775eded06eae107L, Message);
     builder.put(0x76e8bdba0ceb9bb9L, Microservice);
     builder.put(0x675907eeb91f484bL, MicroserviceReference);
