# solutions/MicroserviceSandbox/source_gen/MicroserviceSandbox/sanbox/api-doc.json
@@ -41,7 +41,7 @@
             "description":"Successful operation",
             "content":{
                "application/json":{
-                    "message": "Customer created successfully"
+                    "message": ""
                }
             }
          },
@@ -50,6 +50,44 @@
             "content": {
                "application/json": {
                   "message": ""
+               }
+            }
+         }
+      }
+   }
+},
+"/get-customer?id={id}":{
+   "get":{
+      "tags":[
+         "customer"
+      ],
+      "summary":"Get a single entity by id",
+      "operationId":"getEntity",
+      "parameters":[
+          {
+             "name":"id",
+             "in":"path",
+             "description":"id of entity",
+             "required":true,
+             "schema":{
+                "type":"string"
+             }
+          }
+       ],
+      "responses":{
+         "200":{
+            "description":"Successful operation",
+            "content":{
+               "application/json":{
+                    "entity": "customer"
+               }
+            }
+         },
+         "400":{
+            "description":"Unsuccessful operation",
+            "content": {
+               "application/json": {
+                  "message": "No customer was found with the provided id"
                }
             }
          }
@@ -83,21 +121,30 @@
       }
    }
 },
-"/get-customer?id={id}":{
+"/get-customer-by?name={name}&age={age}":{
    "get":{
       "tags":[
          "customer"
       ],
-      "summary":"Get a single entity by id",
-      "operationId":"getEntity",
+      "summary":"Get a single entity by params",
+      "operationId":"getEntityBy",
       "parameters":[
           {
-             "name":"id",
+             "name":"name",
              "in":"path",
-             "description":"id of customer",
+             "description":"name of entity",
              "required":true,
              "schema":{
                 "type":"string"
+             }
+          },
+          {
+             "name":"age",
+             "in":"path",
+             "description":"age of entity",
+             "required":true,
+             "schema":{
+                "type":"number"
              }
           }
        ],
@@ -114,7 +161,7 @@
             "description":"Unsuccessful operation",
             "content": {
                "application/json": {
-                  "message": "No customer found with the provided id"
+                  "message": "No entity found with the corresponding params"
                }
             }
          }
@@ -132,7 +179,7 @@
           {
              "name":"id",
              "in":"path",
-             "description":"id of customer",
+             "description":"id of entity",
              "required":true,
              "schema":{
                 "type":"string"
@@ -155,7 +202,7 @@
             "description":"Successful operation",
             "content":{
                "application/json":{
-                    "message": "Customer updated succesfully"
+                    "message": "Successfully updated a customer"
                }
             }
          },
@@ -163,7 +210,7 @@
             "description":"Unsuccessful operation",
             "content": {
                "application/json": {
-                  "message": "No customer found with the provided id"
+                  "message": "Customer not found"
                }
             }
          }
@@ -181,7 +228,7 @@
           {
              "name":"id",
              "in":"path",
-             "description":"id of customer",
+             "description":"id of entity",
              "required":true,
              "schema":{
                 "type":"string"
@@ -193,7 +240,7 @@
             "description":"Successful operation",
             "content":{
                "application/json":{
-                    "message": "Successfully deleted the customer"
+                    "message": "Succesfully deleted the customer"
                }
             }
          },
@@ -201,7 +248,7 @@
             "description":"Unsuccessful operation",
             "content": {
                "application/json": {
-                  "message": "No customer found with the provided id"
+                  "message": "No customer found"
                }
             }
          }
